--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 VITE_VUE_APP_TITLE = "Vue3 persian datetime picker"
 VITE_VUE_APP_THEME_COLOR = #FFFFFF
 
-VITE_VUE_APP_PUBLIC_PATH = /vue3-persian-datetime-picker/
+VUE_APP_PUBLIC_PATH = /vue3-persian-datetime-picker/
