--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "buildAll": "npm run export-common & npm run export-umd",
     "export-common": "vue-cli-service build --target lib --name Vue3PersianDatetimePicker --filename vue3-persian-datetime-picker src/picker/Vue3PersianDatetimePicker.vue --formats commonjs --no-clean",
@@ -39,18 +39,17 @@
     "moment-jalaali": "^0.9.4"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
-    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
+    "sass": "^1.68.0",
+    "vite": "^4.4.5",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.5"
-
+    "vue-router": "^4.2.5"
   },
   "eslintConfig": {
     "root": true,
